--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@stylistic/eslint-plugin": "^4.4.0",
     "eslint": "^9.27.0"
   }
