ci/js: check size of dependencies
https://stackoverflow.com/questions/40642008/how-do-i-view-the-size-of-npm-packages

--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -13,6 +13,14 @@ jobs:
       - name: npm install
         run: npm install
 
+      # check size of dependencies
+      - name: dep-size howfat
+        run: npx --yes howfat -d --reporter table --sort size-
+      - name: dep-size qnm
+        run: npx --yes qnm doctor
+      - name: dep-size cost-of-modules
+        run: npx --yes npx cost-of-modules --include-dev --no-install
+
       # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github#example-workflow-that-runs-the-eslint-analysis-tool
       - name: eslint (sarif output)
         # eslint exits 1 if it finds anything to report
