--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -17,14 +17,16 @@ jobs:
       # all tools gave different results locally
       - name: dep-size node_modules
         run: du -sh node_modules | tee -a "$GITHUB_STEP_SUMMARY"
-      - name: dep-size howfat -d (inc. dev)
-        run: npx --yes howfat -d --reporter table --sort size- | tee -a "$GITHUB_STEP_SUMMARY"
-      - name: dep-size howfat -d -p (inc. dev, peer)
-        run: npx --yes howfat -d -p --reporter table --sort size- | tee -a "$GITHUB_STEP_SUMMARY"
-      - name: dep-size qnm
-        run: npx --yes qnm doctor
-      - name: dep-size cost-of-modules
-        run: npx --yes npx cost-of-modules --include-dev --no-install
+      - name: dep-size howfat -d (inc. dev) - ignores size of transitive deps
+        run: npx --yes howfat -d --reporter table --sort size-
+      - name: dep-size howfat -d -p (inc. dev, peer) - includes size of transitive deps per dep
+        run: npx --yes howfat -d -p --reporter table --sort size-
+      - name: dep-size qnm (flat list as in node_modules)
+        run: |
+          echo 'npx --yes qnm doctor' >> "$GITHUB_STEP_SUMMARY"
+          npx --yes qnm doctor | tee -a "$GITHUB_STEP_SUMMARY"
+      # - name: dep-size cost-of-modules # this says total 8.37MB while du says 75MB...
+      #   run: npx --yes npx cost-of-modules --include-dev --no-install
 
       # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github#example-workflow-that-runs-the-eslint-analysis-tool
       - name: eslint (sarif output)
