--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -23,8 +23,10 @@ jobs:
         run: npx --yes howfat -d -p --reporter table --sort size-
       - name: dep-size qnm (flat list as in node_modules)
         run: |
-          echo 'npx --yes qnm doctor' >> "$GITHUB_STEP_SUMMARY"
+          echo '```console' >> "$GITHUB_STEP_SUMMARY"
+          echo '$ npx --yes qnm doctor' >> "$GITHUB_STEP_SUMMARY"
           npx --yes qnm doctor | tee -a "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
       # - name: dep-size cost-of-modules # this says total 8.37MB while du says 75MB...
       #   run: npx --yes npx cost-of-modules --include-dev --no-install
 
