--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,10 +1,8 @@
 name: Sonar
 
+# Run on push in any branch and changes in PRs.
 on:
-  # Trigger analysis when pushing in main or pull requests, and when creating a pull request.
   push:
-    branches:
-      - main
   pull_request:
     types: [opened, synchronize, reopened]
 
