upgrade deprecated sonarcloud-github-action -> sonarqube-scan-action
SonarScanner
This action is deprecated and will be removed in a future release. Please use the sonarqube-scan-action action instead. The sonarqube-scan-action is a drop-in replacement for this action.

--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           wget https://raw.githubusercontent.com/microsoft/sarif-js-sdk/refs/heads/main/packages/eslint-formatter-sarif/sarif.js -O node_modules/sarif.cjs
           bun i utf8 lodash jschardet
-          bunx eslint . --format node_modules/sarif.cjs -o results.sarif
+          bun eslint . --format node_modules/sarif.cjs -o results.sarif
         continue-on-error: true
 
       - name: upload eslint sarif output for Security tab and inline results
