--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -28,8 +28,8 @@ jobs:
         run: bunx howfat -d -p --reporter table --sort size-
       - name: dep-size qnm (flat list as in node_modules)
         run: |
-          emd() { echo "$@" | tee -a "$GITHUB_STEP_SUMMARY"; }
-          cmd() { echo "\$ $@" | tee -a "$GITHUB_STEP_SUMMARY"; "$@" | tee -a "$GITHUB_STEP_SUMMARY"; }
+          emd() { echo "$*" | tee -a "$GITHUB_STEP_SUMMARY"; }
+          cmd() { echo "\$ $*" | tee -a "$GITHUB_STEP_SUMMARY"; "$*" | tee -a "$GITHUB_STEP_SUMMARY"; }
           emd '```console'
           cmd npx --yes qnm doctor
           emd '```'
