--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -97,9 +97,9 @@ jobs:
         run: |
           REP=ghcr.io/${{ github.actor }}/free-games-claimer
           IMG=$REP:${{env.IMAGE_TAG}}
-          log() { echo -e "\n\$ $*"; "$*"; }
+          log() { echo -e "\n\$ $*"; "$@"; }
           emd() { echo "$*" | tee -a "$GITHUB_STEP_SUMMARY"; }
-          cmd() { echo "\$ $*" | tee -a "$GITHUB_STEP_SUMMARY"; "$*" | tee -a "$GITHUB_STEP_SUMMARY"; }
+          cmd() { echo "\$ $*" | tee -a "$GITHUB_STEP_SUMMARY"; "$@" | tee -a "$GITHUB_STEP_SUMMARY"; }
           emd '```console'
           download-size() { docker manifest inspect -v "$1" | jq -c 'if type == "array" then .[] else . end' |  jq -r '[ ( .Descriptor.platform | [ .os, .architecture, .variant, ."os.version" ] | del(..|nulls) | join("/") ), ( [ ( .OCIManifest // .SchemaV2Manifest ).layers[].size ] | add ) ] | join(" ")' | numfmt --to iec --format '%.2f' --field 2 | sort | column -t ; }
           cmd download-size "$IMG"
@@ -116,3 +116,4 @@ jobs:
           local-size() { docker system df -v | grep "$1" -B1; }
           cmd local-size "$REP"
           emd '```'
+        continue-on-error: true
