--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -29,7 +29,7 @@ jobs:
       - name: dep-size qnm (flat list as in node_modules)
         run: |
           emd() { echo "$*" | tee -a "$GITHUB_STEP_SUMMARY"; }
-          cmd() { echo "\$ $*" | tee -a "$GITHUB_STEP_SUMMARY"; "$*" | tee -a "$GITHUB_STEP_SUMMARY"; }
+          cmd() { echo "\$ $*" | tee -a "$GITHUB_STEP_SUMMARY"; "$@" | tee -a "$GITHUB_STEP_SUMMARY"; }
           emd '```console'
           cmd bunx --yes qnm doctor
           emd '```'
