only run js/sonarqube for changes to **.js, **.ts, package.json

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -3,6 +3,10 @@ name: SonarQube Scan
 # Run on push in any branch and changes in PRs.
 on:
   push:
+    paths:
+      - '**.js'
+      - '**.ts'
+      - 'package.json'
   pull_request:
     types: [opened, synchronize, reopened]
 
