--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -3,6 +3,10 @@ name: "JS: deps, lint, tests"
 # Run on push in any branch and changes in PRs.
 on:
   push:
+    paths:
+      - '**.js'
+      - '**.ts'
+      - 'package.json'
   pull_request:
     types: [opened, synchronize, reopened]
 
