--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: fgc # is printed in front of every output line
     image: ghcr.io/vogler/free-games-claimer # otherwise image name will be free-games-claimer-free-games-claimer
     build: .
-    healthcheck: # not that useful, but linter complained, see Dockerfile
-      test: "pgrep node"
-      interval: 10s
+    healthcheck: # see Dockerfile, check that node is running and noVNC is reachable
+      test: pgrep node && curl --fail http://localhost:6080 || exit 1
+      interval: 5s
       timeout: 5s
     ports:
       # - "5900:5900" # VNC server
