fix 656f746626f207aa9144838855fd47c62e46c798: yaml quotes...

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -4,9 +4,9 @@ name: SonarQube Scan
 on:
   push:
     paths:
-      - '**.js'
-      - '**.ts'
-      - 'package.json'
+      - "**.js"
+      - "**.ts"
+      - "package.json"
   pull_request:
     types: [opened, synchronize, reopened]
 
