--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -4,9 +4,9 @@ name: "JS: deps, lint, tests"
 on:
   push:
     paths:
-      - '**.js'
-      - '**.ts'
-      - 'package.json'
+      - "**.js"
+      - "**.ts"
+      - "package.json"
   pull_request:
     types: [opened, synchronize, reopened]
 
